--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
       <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button>Send</button>
     </form>
     <script>
-            var socket = io.connect('http://192.168.0.206:8080');
+            var socket = io.connect('https://exlabchat.herokuapp.com');
 
             // submit text message without reload/refresh the page
             $('form').submit(function(e){
