--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         #messages li:nth-child(odd) { background: #eee; }
     </style>
     <script src="../../socket.io/socket.io.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
     <ul id="messages"></ul>
@@ -21,6 +21,8 @@
       <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="type your message here..." /><button>Send</button>
     </form>
     <script>
+
+        (function($){
             var socket = io.connect('https://exlabchat.herokuapp.com');
 
             // submit text message without reload/refresh the page
@@ -44,6 +46,7 @@
             // ask username
             var username = prompt('Please tell me your name');
             socket.emit('username', username);
+        });
 
     </script>
   </body>
