--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,31 +22,29 @@
     </form>
     <script>
 
-        (function($){
             var socket = io.connect('https://exlabchat.herokuapp.com');
 
             // submit text message without reload/refresh the page
-            $('form').submit(function(e){
+            jQuery('form').submit(function(e){
                 e.preventDefault(); // prevents page reloading
-                socket.emit('chat_message', $('#txt').val());
-                $('#txt').val('');
+                socket.emit('chat_message', jQuery('#txt').val());
+                jQuery('#txt').val('');
                 return false;
             });
 
             // append the chat text message
             socket.on('chat_message', function(msg){
-                $('#messages').append($('<li>').html(msg));
+                jQuery('#messages').append(jQuery('<li>').html(msg));
             });
 
             // append text if someone is online
             socket.on('is_online', function(username) {
-                $('#messages').append($('<li>').html(username));
+                jQuery('#messages').append(jQuery('<li>').html(username));
             });
 
             // ask username
             var username = prompt('Please tell me your name');
             socket.emit('username', username);
-        });
 
     </script>
   </body>
